Fix the unsupported dialog not showing the error message.

--- a/resources/static/dialog/css/popup.css
+++ b/resources/static/dialog/css/popup.css
@@ -90,7 +90,7 @@ section > .contents {
     opacity: 1;
 }
 
-.error #error {
+.error #error, #error.unsupported {
     z-index: 3;
     opacity: 1;
 }
